kubernetes/media/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: media
spec:
  selector:
    matchLabels:
      app: freshrss-app
  replicas: 1
  template:
    metadata:
      labels:
        app: freshrss-app
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 33
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.28.1
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: freshrss-web
          resources:
            limits:
              ephemeral-storage: 8Gi
              memory: 512Mi
            requests:
              cpu: 100m
              ephemeral-storage: 8Gi
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - CMD
                - cli/health.php
            initialDelaySeconds: 11
            periodSeconds: 75
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
              subPath: data
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/extensions
              subPath: extensions
      volumes:
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-pvc
