kubernetes/media/freshrss/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss
  namespace: media
spec:
  selector:
    matchLabels:
      app: freshrss-app
  serviceName: "freshrss"
  replicas: 1
  template:
    metadata:
      labels:
        app: freshrss-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.28.1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: freshrss-web
          resources:
            limits:
              cpu: 100m
              ephemeral-storage: 8Gi
              memory: 512Mi
            requests:
              cpu: 100m
              ephemeral-storage: 8Gi
              memory: 128Mi
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
              subPath: data
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/extensions
              subPath: extensions
  volumeClaimTemplates:
    - metadata:
        name: freshrss-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
